public interface Controllable{
    void turnOn();
    void turnOff();
    boolean getStatus();
}
